<resources>
    <string name="app_name">Weather_App</string>

    <string name="city_name">City Name</string>

    <string name="add_new_localization">ADD NEW LOCATION </string>
    <string name="current_localization">Current Location</string>
    <string name="by_location_name">Location Name</string>

    <string name="city_not_downloaded">Not Downloaded</string>
    <string name="city_landscape">City Landscape</string>
    <string name="dialog_new_city_editText">City name</string>
    <string name="dialog_new_city_headline">Enter city name</string>
    <string name="dialog_remove_city_confirm">CONFIRM</string>
    <string name="dialog_remove_city_make_sure">Are you sure ? </string>
    <string name="dialog_remove_city_content">Do your really want to remove %1$s from your list ?</string>

    <string name="detail_temp">Temp %s</string>
    <string name="detail_temp_min">Temp min %s</string>
    <string name="detail_temp_max">Temp max %s</string>
    <string name="detail_wind">Wind speed %s m/s</string>
    <string name="detail_pressure">Pressure %s</string>
    <string name="detail_humidity">Humidity %s%%</string>
    <string name="detail_clouds">Clouds %s%%</string>
    <string name="detail_rain">Rain in 3h %s</string>
    <string name="detail_snow">Snow in 3h %s</string>
    <string name="simple_date">%1$s %2$s</string>
    <string name="weather_icon">Weather icon</string>
    <string name="celsius">°C</string>
    <string name="fahrenheit">F</string>

</resources>
