<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_newLocalization_chooseEntryType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_new_localization"
        android:textColor="#000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_newLocalization_createByGPS"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/current_localization"
        android:src="@drawable/ic_my_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_newLocalization_chooseEntryType" />

    <TextView
        android:id="@+id/tv_newLocalization_createByGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/current_localization"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_newLocalization_createByGPS"
        app:layout_constraintStart_toEndOf="@+id/iv_newLocalization_createByGPS"
        app:layout_constraintTop_toTopOf="@+id/iv_newLocalization_createByGPS" />

    <ImageView
        android:id="@+id/iv_newLocalization_createByName"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/by_location_name"
        android:src="@drawable/ic_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_newLocalization_createByGPS" />

    <TextView
        android:id="@+id/tv_newLocalization_byName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/by_location_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_newLocalization_createByName"
        app:layout_constraintStart_toEndOf="@+id/iv_newLocalization_createByName"
        app:layout_constraintTop_toTopOf="@+id/iv_newLocalization_createByName" />

</android.support.constraint.ConstraintLayout>